src/test/ui/extern/extern-macro.rs
// #41719

fn main() {
    enum Foo {}
    let _ = Foo::bar!(); //~ ERROR fail to resolve non-ident macro path
}
